[feat] store recipe
